# MyFactory

./: README.md  envexample.txt  pyproject.toml
config/: admin_main_app_reorder.py  settings.py  urls.py
factorySoks/: apps.py
soksfactory/: admin.py  admin_app_reorder.py  apps.py  dashboard.py  forms.py  urls.py  views.py
soksfactory/adminclasses/: adminINEM.py  adminOTHERS.py  adminREFBOOKS.py
soksfactory/migrations/: 0001_initial.py  0002_alter_counterparty_deleted_date_and_more.py  0003_typespecialkeys_specialkeys.py  0004_alter_individuals_full_name_individuals_and_more.py  0005_categorynomenclature_characteristicdoc_nomenclature_and_more.py  0006_alter_specificationdoc_options_and_more.py  0007_alter_specificationdoc_options_and_more.py  0008_alter_characteristicdoc_name_сharacteristic.py  0009_specificationitem_type_nomenclature_sp_fk_and_more.py
soksfactory/models/: modelsINEM.py  modelsOTHERS.py  modelsREFBOOKS.py
soksfactory/static/js/: restricted-model-choice-field.js
soksfactory/templates/soksfactory/: index.html
testapp/: admin.py  admin_app_reorder.py  models.py
testapp/migrations/: 0001_initial.py
